--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -206,7 +206,7 @@ main {
                     width: 240px;
                     height: 240px;
                     margin: 0 50px;
-                    background: url(../../images/KakaoTalk_20230728_132203501.png) no-repeat center/240px;
+                    background: url(../images/KakaoTalk_20230728_132203501.png) no-repeat center/240px;
                 }
 
                 .about-box {
